fix z-index of the add button on map page

--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -48,6 +48,11 @@
   justify-content: center;
   align-items: center;
   transition: background-color 0.2s;
+  z-index: 10;
+}
+
+#page-map .leaflet-container {
+  z-index: 5;
 }
 
 #page-map .create-orphanage:hover {
